--- a/web01/joinForm.html
+++ b/web01/joinForm.html
@@ -27,7 +27,7 @@
 
 .vs { clear: both; width: 100%; height: 350px; overflow: hidden; }
 .vs img { display: block; width: 100%; height: auto; }
-.bread { clear: both; width: 100%; height: auto; line-height: 30px; border-bottom:2px solid #eee; }
+.bread { clear: both; width: 100%; height: auto; }
 .bread_fr { width: 1200px; margin: 20px 30px; }
 [name=opt].sel { color: #007fa8; }
 .page { clear: both; width: 100%; min-height: 100vh; }
@@ -36,7 +36,6 @@
 
 .content { display: none; }
 .content:target { display: block; }
-.page_tit { padding-top: 1em; }
 
 .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; padding-bottom: 50px; }
 .ft_wrap { clear: both; width: 1200px; padding: 60px 50px; }
@@ -115,95 +114,36 @@ $(document).ready(function(){
                 </nav>
             </div>
         </header>
-        <div class="content" id="page1">
+        <div class="content">
             <figure class="vs">
                 <img src="./img/bg1_visual.png" alt=""></img>
             </figure>
             <div class="bread">
                 <div class="bread_fr">
                     <a href="index.html" class="home">홈</a> &gt;
-                    <select name="sel1" id="sel1" class="sel">
-                        <option>구매정보</option>
-                        <option value="network.html#page1">네트워크</option>
-                        <option value="membership.html#page1">멤버십</option>
-                        <option value="service.html#page1">고객지원</option>
-                        <option value="company.html#page1">회사소개</option>
-                    </select> &gt;
-                    <select name="opt" id="sel1" class="sel">
-                        <option>모델</option>
-                        <option value="purchase.html#page2">상담신청</option>
-                        <option value="purchase.html#page3">가이드</option>
-                    </select>
+                    <span class="sel">회원가입</span>
                 </div>
             </div>
             <section class="page">
                 <div class="page_wrap">
-                    <h2 class="page_tit">모델</h2>
+                    <h2 class="page_tit">회원가입</h2>
+                    <div class="join">
+                        <form action="" method="post" name="fm1" id="joinForm">
+                            <table class="fm">
+                                <tbody>
+                                    <tr>
+                                        <th><label for="id">아이디</label></th>
+                                        <td>
+                                            
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </form>
+                    </div>
                 </div>
             </section>
-        </div>
-        <div class="content" id="page2">
-            <figure class="vs">
-                <img src="./img/bg1_visual.png" alt=""></img>
-            </figure>
-            <div class="bread">
-                <div class="bread_fr">
-                    <a href="index.html" class="home">홈</a> &gt;
-                    <select name="sel2" id="sel2" class="sel">
-                        <option>구매정보</option>
-                        <option value="network.html#page1">네트워크</option>
-                        <option value="membership.html#page1">멤버십</option>
-                        <option value="service.html#page1">고객지원</option>
-                        <option value="company.html#page1">회사소개</option>
-                    </select> &gt
-                    <select name="opt" id="sel2" class="sel">
-                        <option>상담신청</option>
-                        <option value="purchase.html#page1">모델</option>
-                        <option value="purchase.html#page3">가이드</option>
-                    </select>
-                </div>
-            </div>
-            <section class="page">
-                <div class="page_wrap">
-                    <h2 class="page_tit">상담신청</h2>
-                </div>
-            </section>
-        </div>
-        <div class="content" id="page3">
-            <figure class="vs">
-                <img src="./img/bg1_visual.png" alt=""></img>
-            </figure>
-            <div class="bread">
-                <div class="bread_fr">
-                    <a href="index.html" class="home">홈</a> &gt;
-                    <select name="sel3" id="sel3" class="sel">
-                        <option>구매정보</option>
-                        <option value="network.html#page1">네트워크</option>
-                        <option value="membership.html#page1">멤버십</option>
-                        <option value="service.html#page1">고객지원</option>
-                        <option value="company.html#page1">회사소개</option>
-                    </select> &gt
-                    <select name="opt" id="sel3" class="sel">
-                        <option>가이드</option>
-                        <option value="purchase.html#page1">모델</option>
-                        <option value="purchase.html#page2">상담신청</option>
-                    </select>
-                </div>
-            </div>
-            <section class="page">
-                <div class="page_wrap">
-                    <h2 class="page_tit">가이드</h2>
-                </div>
-            </section>
-        </div>
-        <script>
-        var opt = document.getElementsByClassName("sel");
-        for(var i=0;i<opt.length;i++){
-            opt[i].addEventListener("change", function(){
-                location.href = this.value;
-            });
-        }
-        </script>
+        </div> 
         <footer class="ft">
             <div class="ft_wrap">
                 <div class="ft_logo"><img src="./img/logo_footer.png" alt=""></div>
