--- a/web01/network.html
+++ b/web01/network.html
@@ -117,82 +117,82 @@ $(document).ready(function(){
         </header>
         <div class="content" id="page1">
             <figure class="vs">
-                <img src="./img/bg1_visual.png" alt=""></img>
+                <img src="./img/bg2_visual.png" alt=""></img>
             </figure>
             <div class="bread">
                 <div class="bread_fr">
                     <a href="index.html" class="home">홈</a> &gt;
                     <select name="sel1" id="sel1" class="sel">
-                        <option>구매정보</option>
-                        <option value="network.html#page1">네트워크</option>
+                        <option>네트워크</option>
+                        <option value="purchase.html#page1">구매정보</option>
                         <option value="membership.html#page1">멤버십</option>
                         <option value="service.html#page1">고객지원</option>
                         <option value="company.html#page1">회사소개</option>
                     </select> &gt;
                     <select name="opt" id="sel1" class="sel">
-                        <option>모델</option>
-                        <option value="purchase.html#page2">상담신청</option>
-                        <option value="purchase.html#page3">가이드</option>
+                        <option>전시장</option>
+                        <option value="network.html#page2">판매/시승</option>
+                        <option value="network.html#page3">엑시던트 스페이스</option>
                     </select>
                 </div>
             </div>
             <section class="page">
                 <div class="page_wrap">
-                    <h2 class="page_tit">모델</h2>
+                    <h2 class="page_tit">전시장</h2>
                 </div>
             </section>
         </div>
         <div class="content" id="page2">
             <figure class="vs">
-                <img src="./img/bg1_visual.png" alt=""></img>
+                <img src="./img/bg2_visual.png" alt=""></img>
             </figure>
             <div class="bread">
                 <div class="bread_fr">
                     <a href="index.html" class="home">홈</a> &gt;
                     <select name="sel2" id="sel2" class="sel">
-                        <option>구매정보</option>
-                        <option value="network.html#page1">네트워크</option>
+                        <option>네트워크</option>
+                        <option value="purchase.html#page1">구매정보</option>
                         <option value="membership.html#page1">멤버십</option>
                         <option value="service.html#page1">고객지원</option>
                         <option value="company.html#page1">회사소개</option>
                     </select> &gt
                     <select name="opt" id="sel2" class="sel">
-                        <option>상담신청</option>
-                        <option value="purchase.html#page1">모델</option>
-                        <option value="purchase.html#page3">가이드</option>
+                        <option>판매/시승</option>
+                        <option value="network.html#page1">전시장</option>
+                        <option value="network.html#page3">엑시던트 스페이스</option>
                     </select>
                 </div>
             </div>
             <section class="page">
                 <div class="page_wrap">
-                    <h2 class="page_tit">상담신청</h2>
+                    <h2 class="page_tit">판매/시승</h2>
                 </div>
             </section>
         </div>
         <div class="content" id="page3">
             <figure class="vs">
-                <img src="./img/bg1_visual.png" alt=""></img>
+                <img src="./img/bg2_visual.png" alt=""></img>
             </figure>
             <div class="bread">
                 <div class="bread_fr">
                     <a href="index.html" class="home">홈</a> &gt;
                     <select name="sel3" id="sel3" class="sel">
-                        <option>구매정보</option>
-                        <option value="network.html#page1">네트워크</option>
+                        <<option>네트워크</option>
+                        <option value="purchase.html#page1">구매정보</option>
                         <option value="membership.html#page1">멤버십</option>
                         <option value="service.html#page1">고객지원</option>
                         <option value="company.html#page1">회사소개</option>
                     </select> &gt
                     <select name="opt" id="sel3" class="sel">
-                        <option>가이드</option>
-                        <option value="purchase.html#page1">모델</option>
-                        <option value="purchase.html#page2">상담신청</option>
+                        <option>엑시던트 스페이스</option>
+                        <option value="network.html#page1">전시장</option>
+                        <option value="network.html#page2">판매/시승</option>
                     </select>
                 </div>
             </div>
             <section class="page">
                 <div class="page_wrap">
-                    <h2 class="page_tit">가이드</h2>
+                    <h2 class="page_tit">엑시던트 스페이스</h2>
                 </div>
             </section>
         </div>
