--- a/web01/joinForm.html
+++ b/web01/joinForm.html
@@ -134,7 +134,25 @@ $(document).ready(function(){
                                     <tr>
                                         <th><label for="id">아이디</label></th>
                                         <td>
-                                            
+                                            <input type="text" id="id" name="id" class="info" required>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th><label for="id">비밀번호</label></th>
+                                        <td>
+                                            <input type="password" id="pw" name="pw" class="info" required>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th><label for="id">이름</label></th>
+                                        <td>
+                                            <input type="text" id="name" name="name" class="info" required>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th><label for="id">이메일</label></th>
+                                        <td>
+                                            <input type="email" id="email" name="email" class="info" required>
                                         </td>
                                     </tr>
                                 </tbody>
