--- a/web01/service.html
+++ b/web01/service.html
@@ -139,6 +139,95 @@ $(document).ready(function(){
             <section class="page">
                 <div class="page_wrap">
                     <h2 class="page_tit">FAQ</h2>
+                    <section class="faq">
+                        <div class="faq_wrap">
+                            <h3 class="faq_tit">자주하는 질문 TOP5</h3>
+                            <div class="faq_top">
+                                <ul>
+                                    <li class="faq_con">
+                                        <span class="top_tit">Q 01</span>
+                                        <p class="top_qna">차량계약 후 해지 시 계약금은 환불 받을수 있습니까?</p>
+                                    </li>
+                                    <li class="faq_con">
+                                        <span class="top_tit">Q 02</span>
+                                        <p class="top_qna">장애인차량 구입조건에 대해 알고 싶습니다.</p>
+                                    </li>
+                                    <li class="faq_con">
+                                        <span class="top_tit">Q 03</span>
+                                        <p class="top_qna">차량구입시 신용카드는 얼마까지 이용할 수 있나요?</p>
+                                    </li>
+                                    <li class="faq_con">
+                                        <span class="top_tit">Q 04</span>
+                                        <p class="top_qna">차량계약 후 예상납기일에 대해 알 수 있나요?</p>
+                                    </li>
+                                    <li class="faq_con">
+                                        <span class="top_tit">Q 05</span>
+                                        <p class="top_qna">세이브오토 이용에 관해 알고 싶습니다.</p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="faq_bottom">
+                                <div class="faq_lst" id="1">
+                                    <span class="faq_tit">보유중인 자동차를 팔고 싶은데, 어떻게 하면 좋을까요?</span>
+                                    <span class="faq_qna">매입 서비스에 대한 자세한 내용이 궁금하시거나,
+                                    판매 상담을 받으시려면 [Home > 차량관리서비스 > 매도&구매지원 > 중고차 > 내차팔기] 메뉴에서
+                                    '내차 팔기 상담신청' 을 통해 상담신청을 하시면 친절하고 상세하게 안내해 드리겠습니다.</span>
+                                </div>
+                                <div class="faq_lst" id="2">
+                                    <span class="faq_tit">차량구입시 신용카드는 복수의 카드로 결제가 가능한가요?</span>
+                                    <span class="faq_qna">▶ 자동차 구입시 신용카드를 이용한 결제는 고객님 신용카드 한도내에서 
+                                    희망하시는 금액까지 자유로이 결제가 가능합니다.</span>
+                                </div>
+                                <div class="faq_lst" id="3">
+                                    <span class="faq_tit">정비관련 업체구분은 어떻게 하나요?</span>
+                                    <span class="faq_qna">하이테크센터와 서비스협력사로 구분되어 있습니다.
+                                    하이테크센터는 저희 현대자동차에서 직영으로 운영하는 정비거점이고
+                                    서비스협력사는 현대자동차와 협정을 체결후 규정에 의거 당사 고객에게 정비서비스를 제공하는 거점이며,
+                                    서비스협력사는 다시 종합블루핸즈와 전문블루핸즈로 나누어 집니다.
+                                    종합블루핸즈란 국가에서 자동차 종합정비업 및 소형정비업으로 등록된 정비업소이며,
+                                    전문블루핸즈란 국가에서 자동차 부분정비업으로 인가된 정비업소 입니다.</span>
+                                </div>
+                                <div class="faq_lst" id="4">
+                                    <span class="faq_tit">연료부족경고등 점등 후 몇 키로 운행 가능한지요.</span>
+                                    <span class="faq_qna">연료 부족 경고등이 점등되면 연료를 바로 보충 하십시오.
+                                    대략 20~30 Km 정도 여유는 있습니다만 도로조건이나 운행여건, 차종에 따라 다르므로
+                                    정확한 운행 키로수를 측정해드리긴 어렵습니다.
+                                    연료가 완전 소모되어 운전할 경우 엔진 및 연료장치에 고장을 일으킬 수 있으므로,
+                                    경고등이 점등되기 이전에 연료를 충전하여 사용하시기 바랍니다.</span>
+                                </div>
+                                <div class="faq_lst" id="5">
+                                    <span class="faq_tit">기존에 이미 사용하고 있던 ID인데, 왜 다시 본인 인증과 계정 통합을 해야 하나요?</span>
+                                    <span class="faq_qna">여러 개 ID 보유한 고객으로 ID 혼란으로 인한 고객 문의가 많이 발생하고 있습니다. 이에 회원 1명 당 1개의 ID만 이용할 수 있도록 변경되었습니다.(블루링크 등 현대자동차 타 서비스 동일)
+                                    기존에 여러 개 ID를 보유하셨던 고객이라면, ID 통합을 위해서 본인인증과 계정 통합을 진행해주세요. 통합된 ID로 현대닷컴, 블루링크, 디지털 키, 마이현대에서 동일하게 사용 가능합니다.
+                                    ※ 디지털 키에 가입하신 고객이라면 ‘휴대폰 인증’을 통해 본인인증 받으셔야 서비스 이용이 가능합니다. (아이핀 인증 시, 이후 휴대폰 본인인증 재 요청됨)
+                                    계정 통합 절차를 진행하지 않으시면 해당 ID로 서비스 이용이 불가합니다. (필수)</span>
+                                </div>
+                                <div class="faq_lst" id="6">
+                                    <span class="faq_tit">"예상하지 못한 오류가 발생했습니다."메시지가 표시됩니다.</span>
+                                    <span class="faq_qna">시스템에서 작업 오류가 발생하는 경우 표시됩니다. 1시간 후에도 동일한 메시지가 보이는 경우에는 다음 방법 중 하나를 시도해 주세요.
+                                    브라우저의 쿠키와 캐시를 삭제하세요
+                                    다른 브라우저를 사용하세요. 예를 들어, 인터넷 익스플로러를 사용하고 있다면 크롬 또는 Safari를 이용해서 접속하세요. 브라우저가 최신 버전이 아닌 경우에는 이용에 제한이 있을 수 있습니다. 
+                                    제시된 모든 방법으로도 해결되지 않는다면 홈페이지 Q&A 및 고객센터로 문의주세요. 문제화면의 스크린샷을 첨부하시면 원인파악에 도움이 됩니다.</span>
+                                </div>
+                                <div class="faq_lst" id="7">
+                                    <span class="faq_tit">블루멤버스 회원 가입 후 카드 발급은 언제 되나요?</span>
+                                    <span class="faq_qna">신차 구매시 매매주문서에서 블루멤버스 카드 발급신청 가능합니다. 제작증 발급 익일에 가입완료되어 실물카드 일주일~열흘 소요됩니다. 단, 카드 번호 채번은 다음 날 바로 가능하며 마이현대 앱에서 확인 가능합니다. 블루멤버스 제휴 신용카드 신청시 비신용카드 미발급되며, 신용카드 미발급 고객이 비신용카드 필요시 고객센터 080-600-6000으로 신청 가능합니다.</span>
+                                </div>
+                                <div class="faq_lst" id="8">
+                                    <span class="faq_tit">블루멤버스가 뭔가요?</span>
+                                    <span class="faq_qna">블루멤버스는 고객이 자동차를 효율적이고 경제적으로 관리하여 자동차 관련 모든 과정에서 최상의 경험을 할 수 있도록 돕는 현대자동차의 멤버십 서비스입니다. 차량 구매시나 제휴 가맹점 이용시 적립받은 포인트로 신차 구매시나 가맹점 등에서 현금처럼 사용하시고 각종 특화 서비스 혜택을 제공받으실 수 있습니다.</span>
+                                </div>
+                                <div class="faq_lst" id="9">
+                                    <span class="faq_tit">보증 수리기간이 어떻게 되나요?</span>
+                                    <span class="faq_qna">모젠 단말기의 보증수리 기간은 구입한 신차의 보증 내용 및 규약에 종속됩니다. 현대자동차의 보증수리 기간은 차종, 동력전달장치, 일반부품 등에 따라 차이가 있으며, 모젠 단말기는 일반부품의 보증기간에 따릅니다.</span>
+                                </div>
+                                <div class="faq_lst" id="10">
+                                    <span class="faq_tit">사용도중 단말기가 갑자기 중지되거나, 버튼을 입력해도 말을 듣지 않습니다.</span>
+                                    <span class="faq_qna">모젠은 차량용 컴퓨터로 개발되었으며, 각종 AV와 이동전화, 내비게이션 시스템과 텔레매틱스의 각 기능이 중앙처리장치(CPU)와 운영시스템(OS)에 의해서 운영되도록 개발되었습니다. 따라서, 작동 중에 소프트웨어의 충돌이 발생하거나 프로그램의 원할한 처리가 이루어지지 않는 경우, 아주 간헐적으로 단말기가 일시적으로 동작이 중지되는 경우가 발생할 수 있습니다. 이는 고장이나 단말기 시스템의 하자는 아니며, 리셋버튼을 누르시면 다시 이용하실 수 있습니다. 단말기 오른쪽 하단에 있는 리셋버튼을 누르시면 다시 작동이 가능합니다.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </section>
         </div>
@@ -166,6 +255,20 @@ $(document).ready(function(){
             <section class="page">
                 <div class="page_wrap">
                     <h2 class="page_tit">문의</h2>
+                    <div class="not">
+                        <div class="not_wrap">
+                            <p class="not_tit">
+                            ※ 고객님의 소중한 정보 보호를 위해 로그인은 30분간 유지되며, 이 후 자동으로 로그아웃 되어 1:1문의를 작성하실 수 없습니다. 필요하신 경우 상담내용 하단 [로그인 연장] 버튼을 클릭하여 연장하실 수 있습니다.
+                            ※ 고객님의 문의 관련 정보는 접수일 기준 1년간 보관되며, 기간 만료 후 자동 폐기됩니다.
+                            ※ 1:1 문의를 통한 전화상담 요청은 불가하오니 이점 양해하여 주시기 바랍니다.
+                            </p>
+                            <p class="not_tit" id="not_tit">
+                            ※ 문의 내용 중 욕설, 폭언, 위협, 허위사실 등이 포함도리 경우 모욕, 협박, 명예훼손 등으로 간주하여 답변이 제외될 수 있으며, 관련 법규에 의거 처벌될 수 있습니다.
+                            </p>
+                            <p class="not_ask">문의 사항을 상세히 작성해주세요.</p>
+                            <span class="req">입력 항목</span>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
@@ -193,6 +296,82 @@ $(document).ready(function(){
             <section class="page">
                 <div class="page_wrap">
                     <h2 class="page_tit">공지사항</h2>
+                    <div class="board">
+                        <ul class="board_wrap">
+                            <li>
+                                <div>
+                                    <p class="board_th">제휴/위탁 업체 사명 변경 관련 개인정보 처리방침과 이용약관 개정</p>
+                                    <p class="board_tb">안녕하세요. 현대자동차입니다.
+                                        항상 현대자동차를 아껴주시고 관심을 가져주시는 회원 여러분께 감사드립니다.
+                                        현대자동차 개인정보 처리방침(차량구매, 정비고객) 외 4개의 개인정보 처리방침과 이용약관이 아래와 같이 변경됨을 알려드립니다.</p>
+                                    <p class="board_date">2022.10.14</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <p class="board_th">캐스퍼 온라인 세일즈 지원 대행사 모집 공고</p>
+                                    <p class="board_tb">안녕하세요. 현대자동차입니다. 캐스퍼 온라인 세일즈 지원을 대행할 운영사를 모집합니다. 희망 업체에서는 아래 내용을 참조하여 신청해주시기 바랍니다.</p>
+                                    <p class="board_date">2022.09.22</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <p class="board_th">2022년 현대자동차 국내 프로모션(행사) 부문 협력업체 모집</p>
+                                    <p class="board_tb">현대자동차에서는 국내 프로모션 활동 및 각종 대고객 이벤트 행사를 효과적으로 수행(대행)할 역량있는 협력업체를 모집하오니 희망 업체에서는 소정의 절차에 따라 신청/접수하여 주시기 바랍니다.</p>
+                                    <p class="board_date">2022.09.21</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <p class="board_th">블루멤버스 제휴서비스 종료 안내 (하나투어)</p>
+                                    <p class="board_tb">안녕하세요. 블루멤버스입니다. 항상 현대자동차를 사랑해 주시는 회원 여러분께 감사드립니다. 블루멤버스의 서비스가 아래와 같이 변경되어 회원 여러분께 안내드립니다.</p>
+                                    <p class="board_date">2022.09.20</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <p class="board_th">현대 카페이 위치기반서비스 이용약관 개정 공지</p>
+                                    <p class="board_tb">안녕하세요. 현대자동차입니다. 항상 현대자동차를 아껴주시고 관심을 가져주시는 회원 여러분께 감사드립니다. 현대 카페이 위치기반서비스 이용약관이 아래와 같이 개정됨을 알려드립니다.</p>
+                                    <p class="board_date">2022.09.15</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <p class="board_th">블루링크 위치 공유 서비스 이용불가 안내</p>
+                                    <p class="board_tb">안녕하세요 블루링크입니다. 현대자동차를 사랑해주시는 고객 여러분께 감사드립니다. 시스템 개선 작업으로 인하여, 차량 관리 서비스의 이용이 일시적으로 불가합니다.</p>
+                                    <p class="board_date">2022.09.15</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <p class="board_th">캐스퍼 온라인 개인정보 처리방침 개정</p>
+                                    <p class="board_tb">안녕하세요. 현대자동차입니다. 현대자동차를 사랑해주시고 아껴주시는 회원 여러분께 감사드립니다. 캐스퍼 온라인 개인정보 처리방침이 아래와 같이 변경됨을 알려드립니다.</p>
+                                    <p class="board_date">2022.09.14</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <p class="board_th">블루링크 개인정보 처리방침 개정</p>
+                                    <p class="board_tb">안녕하세요. 블루링크입니다. 현대자동차를 사랑해주시고 아껴주시는 회원 여러분께 감사드립니다. 블루링크 개인정보 처리방침이 아래와 같이 변경됨을 알려드립니다.</p>
+                                    <p class="board_date">2022.09.08</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <p class="board_th">디지털 키 개인정보 처리방침, 위치기반 서비스 이용약관 개정</p>
+                                    <p class="board_tb">안녕하세요. 현대자동차입니다. 항상 현대자동차를 아껴주시고 관심을 가져주시는 회원 여러분께 감사드립니다. 디지털 키 개인정보 처리방침 및 위치기반서비스 이용약관이 아래와 같이 변경됨을 알려드립니다.</p>
+                                    <p class="board_date">2022.09.07</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <p class="board_th">블루멤버스 제휴서비스 종료 안내 (삼성화재 다이렉트 운전자보험)</p>
+                                    <p class="board_tb">안녕하세요. 블루멤버스입니다. 항상 현대자동차를 사랑해 주시는 회원 여러분께 감사드립니다. 블루멤버스의 서비스가 아래와 같이 변경되어 회원 여러분께 안내드립니다.</p>
+                                    <p class="board_date">2022.08.29</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
         </div>
