--- a/web01/network.html
+++ b/web01/network.html
@@ -166,6 +166,8 @@ $(document).ready(function(){
             <section class="page">
                 <div class="page_wrap">
                     <h2 class="page_tit">판매/시승</h2>
+                    <img src="./img/testdriving.png" alt="">
+                    <img src="./img/testdriving2.png" alt="">
                 </div>
             </section>
         </div>
@@ -177,7 +179,7 @@ $(document).ready(function(){
                 <div class="bread_fr">
                     <a href="index.html" class="home">홈</a> &gt;
                     <select name="sel3" id="sel3" class="sel">
-                        <<option>네트워크</option>
+                        <option>네트워크</option>
                         <option value="purchase.html#page1">구매정보</option>
                         <option value="membership.html#page1">멤버십</option>
                         <option value="service.html#page1">고객지원</option>
@@ -193,6 +195,40 @@ $(document).ready(function(){
             <section class="page">
                 <div class="page_wrap">
                     <h2 class="page_tit">엑시던트 스페이스</h2>
+                    <p class="page_con">고객들에게 다양한 서비스를 제공하기 위한 상용차 복합 거점 브랜드 ‘엑시언트 스페이스’
+                        다양한 상용차와 신기술을 체험할 수 있어 지역 사회의 복합 문화 공간으로 자리 잡고 있습니다.</p>
+                    <div class="acc">
+                        <div class="acc_wrap" id="acc1">
+                            <img src="./img/xcientspace1.jpg" alt="">
+                            <h3 class="acc_tit">엑시언트 스페이스 제주 (2020.11)</h3>
+                            <p class="acc_con">제주 지역 물류업체 및 지역 발전을 위한 원스톱 거점</p>
+                        </div>
+                        <div class="acc_wrap" id="acc2">
+                            <img src="./img/xcientspace2.jpg" alt="">
+                            <h3 class="acc_tit">엑시언트 스페이스 아산 (2019.5)</h3>
+                            <p class="acc_con">충청권 상용차 판매/정비/편의 서비스 제공을 위한 공간</p>
+                        </div>
+                        <div class="acc_wrap" id="acc3">
+                            <img src="./img/xcientspace3.jpg" alt="">
+                            <h3 class="acc_tit">엑시언트 스페이스 울산 (2017.12)</h3>
+                            <p class="acc_con">한국 최대 산업 클러스터인 울산의 상용차 복합 문화 공간</p>
+                        </div>
+                        <div class="acc_wrap" id="acc4">
+                            <img src="./img/xcientspace4.jpg" alt="">
+                            <h3 class="acc_tit">엑시언트 스페이스 부산 (2017.11)</h3>
+                            <p class="acc_con">동북아 항만 물류 중심 부산의 상용차 특화 거점</p>
+                        </div>
+                        <div class="acc_wrap" id="acc5">
+                            <img src="./img/xcientspace5.jpg" alt="">
+                            <h3 class="acc_tit">엑시언트 스페이스 전주 (2017.9)</h3>
+                            <p class="acc_con">특장차 맞춤형 콘셉트 기반의 상용차 특화 거점</p>
+                        </div>
+                        <div class="acc_wrap" id="acc6">
+                            <img src="./img/xcientspace6.jpg" alt="">
+                            <h3 class="acc_tit">엑시언트 스페이스 제천 (2016.11)</h3>
+                            <p class="acc_con">상용차 풀 라인업 전시와 체험을 강조한 복합 거점</p>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
